2004-03-20  Marcus Brinkmann  <marcus@gnu.org>

	* configure.ac: Add include for libhurd-cap-server/headers.m4.
	(AC_CONFIG_FILES): Add libhurd-cap-server/Makefile.
	* Makefile.am (SUBDIRS): Add libhurd-cap-server.
	* libhurd-cap-server: New directory.

2004-03-17  Marcus Brinkmann  <marcus@gnu.org>

	* configure.ac: Add include for libpthread/headers.m4.
	(AC_CONFIG_FILES): Add libpthread/Makefile.
	* Makefile.am (SUBDIRS): Add libpthread.

	* libpthread: New directory, populated with Neal H. Walfields
	pthread implementation.

2004-03-09  Daniel Wagner  <wagi@gmx.ch>

	* configure.ac: Add check for fig2dev.
	* doc/Makefile.am (EXTRA_DIST): New target.
	(tex_files, fig_files, eps_files, eps_cleanfiles): New variable
	(SUFFIXES): Add eps, fig and pdf to the list.
	(.fig.eps): New generic rule.
	(MAINTAINERCLEANFILES): New target.
	* doc/ddf_insert_event.fig: New file.
	
2003-10-12  Marcus Brinkmann  <marcus@gnu.org>

	* acinclude.m4: New file.
	* configure.ac: Include laden/config.m4, wortel/config.m4, and
	physmem/config.m4.

2003-09-22  Marcus Brinkmann  <marcus@gnu.org>

	* configure.ac: Always define the automake conditionals ARCH_* to
	true or false.

	* configure.ac: Define $arch to ia32 or powerpc.  Do not include
	arch specific libl4/headers.m4.

	* configure.ac: Add detection of powerpc architecture.
	(AC_CONFIG_FILES): Add libl4/powerpc/Makefile.

2003-09-07  Neal H. Walfield  <neal@cs.uml.edu>

	* configure.ac: Check for latex, dvips and ps2pdf.  Bail if not
	found.  Generate doc/Makefile.

2003-07-26  Marcus Brinkmann  <marcus@gnu.org>

	* Initial check-in.
