@@ -1,4 +1,5 @@
-SUBDIRS = libl4 libhurd-ihash libhurd-slab libhurd-cap libhurd-cap-server \
+SUBDIRS = libl4 hurd libhurd-ihash libhurd-slab \
+	libhurd-cap libhurd-cap-server \
 	libpthread \
 	libc-parts laden wortel physmem \
 	doc
